Import de la version de travail.
git-svn-id: svn+ssh://thue/home/mpg/svn-rep/texing/ted@6 21542199-9fba-4508-a318-77bcb5d184c7

--- a/README
+++ b/README
@@ -34,8 +34,7 @@ ted.dtx: single source for both documentations and package
 Version info
 ------------
 
-2007-12-09  v1.0    first release
-2007-12-12  v1.01   trivial bug fix
+2007-12-09  v1.0    fisrt release
 
 License
 -------
