--- a/ted.dtx
+++ b/ted.dtx
@@ -1,14 +1,14 @@
 %
 % \iffalse   /!\  utf-8 encoded file  /!\
-%
-% ted package by Manuel P\'egouri\'e-Gonnard <mpg@math.jussieu.fr>
-% ----------------------------------------------------------------
+% 
+%     ted package by Manuel P\'egouri\'e-Gonnard <mpg@math.jussieu.fr>
+%     ----------------------------------------------------------------
 %
 % This work may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License, either version 1.3c of this license or (at
 % your option) any later version.  The latest version of this license is in:
 %
-%    http://www.latex-project.org/lppl.txt
+%   http://www.latex-project.org/lppl.txt
 %
 % and version 1.3c or later is part of all distributions of LaTeX version
 % 2006/05/20 or later.
@@ -33,7 +33,7 @@
 % \iffalse
 %</package>
 % \fi
-% \CheckSum{774}
+% \CheckSum{0}
 % \CharacterTable
 %  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
 %   Lower-case    \a\b\c\d\e\f\g\h\i\j\k\l\m\n\o\p\q\r\s\t\u\v\w\x\y\z
@@ -64,7 +64,7 @@ This is a generated file. See ted.dtx for license information.
 
 \endpreamble
 \askforoverwritefalse
-%\generate{\file{ted.ins}{\from{ted.dtx}{batchfile}}}
+\generate{\file{ted.ins}{\from{ted.dtx}{batchfile}}}
 %\generate{\file{ted.drv}{\from{ted.dtx}{driver}}}
 \generate{\file{ted.sty}{\from{ted.dtx}{package}}}
 \generate{\file{ted-fr.drv}{\from{ted.dtx}{pilote}}}
@@ -125,9 +125,7 @@ This is a generated file. See ted.dtx for license information.
 % \date{\fileversion\ (\filedate)}
 %
 % \maketitle
-% \tracingmacros1
 % \iffrenchdoc\else \tableofcontents \fi
-% \tracingmacros0
 %
 % \section{Introduction}
 %
