Détail à la fin de ted.dtx (typeout commentés).
git-svn-id: svn+ssh://thue/home/mpg/svn-rep/texing/ted@10 21542199-9fba-4508-a318-77bcb5d184c7

--- a/ted.dtx
+++ b/ted.dtx
@@ -1223,21 +1223,21 @@ This is a generated file. See ted.dtx for license information.
 %</package>
 %<*batchfile>
 % \fi
-\typeout{**************************************************}
-\typeout{*}
-\typeout{* To finish the installation you have to move the}
-\typeout{* following file into a directory searched by TeX:}
-\typeout{*}
-\typeout{* \space\space\space\space ted.sty}
-\typeout{*}
-\typeout{* Documentation is in ted.dvi or ted.pdf}
-\typeout{*}
-\typeout{* To produce french documentation, run}
-\typeout{* \space\space \space\space (pdf)latex ted-fr.drv}
-\typeout{*}
-\typeout{* Happy TeXing!}
-\typeout{*}
-\typeout{**************************************************}
+% \typeout{**************************************************}
+% \typeout{*}
+% \typeout{* To finish the installation you have to move the}
+% \typeout{* following file into a directory searched by TeX:}
+% \typeout{*}
+% \typeout{* \space\space\space\space ted.sty}
+% \typeout{*}
+% \typeout{* Documentation is in ted.dvi or ted.pdf}
+% \typeout{*}
+% \typeout{* To produce french documentation, run}
+% \typeout{* \space\space \space\space (pdf)latex ted-fr.drv}
+% \typeout{*}
+% \typeout{* Happy TeXing!}
+% \typeout{*}
+% \typeout{**************************************************}
 % \iffalse
 %</batchfile>
 % \fi
