Clean-up : todo, session vim.
git-svn-id: svn+ssh://thue/home/mpg/svn-rep/texing/ted@40 21542199-9fba-4508-a318-77bcb5d184c7

--- a/ted.dtx
+++ b/ted.dtx
@@ -1,5 +1,5 @@
 %
-% \iffalse   /!\  utf-8 encoded file  /!\
+% \iffalse   /!\  this file contains non-ascii --  encoding is utf-8 /!\
 % 
 %     ted package by Manuel P\'egouri\'e-Gonnard <mpg@math.jussieu.fr>
 %     ----------------------------------------------------------------
