--- a/ted.dtx
+++ b/ted.dtx
@@ -10,8 +10,8 @@
 %
 %   http://www.latex-project.org/lppl.txt
 %
-% and version 1.3c or later is part of all distributions of LaTeX version
-% 2006/05/20 or later.
+% and version 1.3c or later is part of all distributions of LaTeX
+% version 2006/05/20 or later.
 %
 % This work has the LPPL maintenance status `maintained'.
 %
@@ -29,7 +29,7 @@
 %<*package>
 % \fi
 % \ProvidesFile{ted.dtx}
-  [2007/12/12 v1.01 \space token list editor \space (mpg)]
+  [2008/02/12 v1.01+ \space a token list editor \space (mpg)]
 % \iffalse
 %</package>
 % \fi
@@ -81,7 +81,7 @@ This is a generated file. See ted.dtx for license information.
 \usepackage[bookmarks=false, colorlinks=true,
   linkcolor=black, urlcolor=black]{hyperref}
 \usepackage{fixltx2e}
-\expandafter\newif\csname iffrenchdoc\endcsname % just hiding this if
+\expandafter\newif\csname iffrenchdoc\endcsname % cachez ce if...
 %<pilote>\frenchdoctrue
 %</driver|pilote>
 %<*gobble>
