Enlevé un espace parasite.
git-svn-id: svn+ssh://thue/home/mpg/svn-rep/texing/ted@48 21542199-9fba-4508-a318-77bcb5d184c7

--- a/ted.dtx
+++ b/ted.dtx
@@ -837,7 +837,7 @@ This is a generated file. See ted.dtx for license information.
       \uccode`{=#2
     \or
       \uccode`}=#2
-      \uppercase{\ted@toks\expandafter{\expandafter{\the\ted@toks}}}
+      \uppercase{\ted@toks\expandafter{\expandafter{\the\ted@toks}}}%
       \expandafter\endgroup
       \expandafter\ted@add@toks\expandafter{\the\ted@toks}%
     \fi}}
