Corrigé un bug, mis à jour la doc.
git-svn-id: svn+ssh://thue/home/mpg/svn-rep/tex/texing/ted@93 21542199-9fba-4508-a318-77bcb5d184c7

--- a/README
+++ b/README
@@ -34,7 +34,11 @@ ted.dtx: single source for both documentations and package
 Version info
 ------------
 
-2007-12-09  v1.0    fisrt release
+2007-12-09  v1.0    First release.
+2007-12-12  v1.01   Fixed a stupid bug.
+2008-03-02  v1.05   - Fixed a serious bug when trying to substitute AA
+                    in a string ending with A. Removed a spurious space.
+                    - Added an occurence counter.
 
 License
 -------
