Corrigé l'adresse mail. Version 1.05 du CTAN.
git-svn-id: svn+ssh://thue/home/mpg/svn-rep/tex/texing/ted@94 21542199-9fba-4508-a318-77bcb5d184c7

--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
                         A (primitive) token list editor
 
-               Manuel P\'egouri\'e-Gonnard <mpg@math.jussieu.fr>
+                  Manuel P\'egouri\'e-Gonnard <mpg@elzevir.fr>
 
 Presentation
 ------------
