--- a/ted.dtx
+++ b/ted.dtx
@@ -122,7 +122,7 @@ This is a generated file. See ted.dtx for license information.
 %
 % \title{\iffrenchdoc L'extension \pf{ted}\else The \pf{ted} package\fi}
 % \author{Manuel Pégourié-Gonnard\\ 
-%   \href{mailto:mpg@math.jussieu.fr}{mpg@math.jussieu.fr}}
+%   \href{mailto:mpg@elzevir.fr}{mpg@elzevir.fr}}
 % \date{\fileversion\ (\filedate)}
 %
 % \maketitle
